...
//        let mockAnalysisService = MockAnalysisService()
//        let mockNotificationService = MockNotificationService()
//        
//        if let longUserName = ProcessInfo.processInfo.environment["UI_TEST_LONG_USER_NAME"] {
//            UserDefaults.standard.set(longUserName, forKey: "testUserFullName")
//        }
//        let successString = ProcessInfo.processInfo.environment["UI_TEST_LOGIN_SUCCESS"]
//        let errorString = ProcessInfo.processInfo.environment["UI_TEST_LOGIN_ERROR"]
//        let shouldSucceed = successString == "true"
//        let shouldShowError = errorString == "true"
//        await mockAuthService.configureForUITesting(shouldSucceed: shouldSucceed, shouldShowError: shouldShowError)
//        
//        await mockQuestionService.configureForUITesting()
//        await mockJournalService.configureForUITesting()
...
//    }
//
//    private func setupAnalysisScreen() async {
//        let analysisService = await container.resolve() as AnalysisServiceProtocol
//        
//        if let mockService = analysisService as? MockAnalysisService {
//            if ProcessInfo.processInfo.environment["UI_TEST_EMPTY_ANALYSIS"] == "true" {
//                await mockService.configureForUITesting(empty: true)
//            } else {
//                await mockService.configureForUITesting(empty: false)
//            }
//        }
//        
...
